--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+v1.5.1
+======
+Oct 12, 2023
+* Update Selenium Java 4.14.0 support CDP to 118
+* Remove selenium-http-jdk-client
+
 v1.5.0
 ======
 Oct 4, 2023
