--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+v1.6.0
+======
+Dec 10, 2023
+* Update Selenium 4.16.1
+* Update support CDP 120 (Chrome)
+* Update devtools v120 in WebUI keyword
+
 v1.5.2
 ======
 Nov 5, 2023
