--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,15 @@
+v1.7.2
+======
+Apr 02, 2024
+* Update Selenium 4.19.1
+* Update support CDP 123 (Chromium)
+
+v1.7.1
+======
+Jan 27, 2024
+* Update Selenium 4.18.1
+* Update support CDP 122 (Chromium)
+
 v1.7.0
 ======
 Jan 26, 2024
