--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+v1.7.8
+======
+Jun 24, 2024
+* Update Selenium 4.22.0
+* Update support CDP 126 (Chromium)
+* Update CucumberListener class
+
 v1.7.7
 ======
 May 28, 2024
